2007-06-11  Michael Smith <msmith@fluendo.com>

	* flumotion/component/misc/httpfile/file.py:
	  Add a debug statement to help track down unexpected/unexplained
	  exceptions in logs.

2007-06-11  Michael Smith <msmith@fluendo.com>

	* flumotion/twisted/fdserver.py:
	  Add more colon for Dirty Andy.

2007-06-11  Michael Smith <msmith@fluendo.com>

	* flumotion/twisted/fdserver.py:
	  If we receive an unconnected socket, log this, close it, and return,
	  rather than passing something that won't work properly to the new
	  client.

2007-06-11  Michael Smith <msmith@fluendo.com>

	* flumotion/component/base/http.py:
	  Don't return None from authentication errback; instead return the
	  failure.
	* flumotion/component/consumers/httpstreamer/http.py:
	  Don't add an errback to the authentication remote call that
	  swallows the failure.
	* flumotion/component/consumers/httpstreamer/resources.py:
	  Add an errback to prevent auth failures from reaching the logs as a
	  reactor traceback.
	* flumotion/component/misc/httpfile/file.py:
	  As above.

2007-06-08  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/producers/bttv/admin_gtk.py (BTTVAdminGtk.setup):
	Make sure setup() method returns a deffered.

2007-06-08  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/basicwatchdog.py
	  (AVBasicWatchdog.eaterSetInactive, AVBasicWatchdog.eaterSetActive):
	* flumotion/component/combiners/switch/switch.py (Switch.init,
	  Switch.cb, Switch.eventStarted, Switch.eventStopped,
	  SingleSwitch.configure_pipeline, AVSwitch.configure_pipeline):
	Renamed startingEater to idealEater so the watchdog can know
	which eater is the current one it should switch to when it comes
	back online.

2007-06-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/basicwatchdog.py
	  (SingleBasicWatchdog.eaterSetActive,
	  AVBasicWatchdog.eaterSetInactive, AVBasicWatchdog.eaterSetActive):