@@ -1,3 +1,8 @@
+2007-06-11  Andy Wingo  <wingo@pobox.com>
+
+	* flumotion/admin/command/commands.py (do_workerinvoke): Add new
+	command, invokes a function on a worker.
+
 2007-06-11  Michael Smith <msmith@fluendo.com>
 
 	* flumotion/component/misc/httpfile/file.py:
